Have GeoDataLatLonBox(void) create empty boxes.

BUG: 299959
REVIEW: 105038